Make backend Java 8 compatible