@@ -42,10 +42,10 @@ public class ProcessCodeController {
     }
 
     private void validate(ProcessCode pc) {
-        if (pc.getCode() == null || pc.getCode().isBlank()) {
+        if (pc.getCode() == null || pc.getCode().trim().isEmpty()) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "工序代号不能为空");
         }
-        if (pc.getName() == null || pc.getName().isBlank()) {
+        if (pc.getName() == null || pc.getName().trim().isEmpty()) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "工序名称不能为空");
         }
     }
